--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=giex
+
+# Usar H2 como base de datos en memoria
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# Habilitar consola web de H2 (opcional pero útil)
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# Configuración básica de JPA (para evitar errores si usas Hibernate)
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
